# Vulkanic

./: .gitignore  CMakeLists.txt  ObjModel.cpp  ObjModel.h  README.md  RuntimeConfig.cpp  RuntimeConfig.h  SphereMesh.cpp  SphereMesh.h  VulkanPathTracer.cpp  VulkanPathTracer.h  build.ps1  main.cpp  path_tracer.rchit  path_tracer.rgen  path_tracer.rmiss  path_tracer_common.glsl  path_tracer_config.json  shadow.rmiss  sky.comp
.github/workflows/: release.yml
